--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,7 @@
 					<scanIntervalSeconds>5</scanIntervalSeconds>
 					<webApp>
 						<contextPath>/${project.artifactId}</contextPath>
+						<baseResource>/src/main/webapp</baseResource>
 					</webApp>
 				</configuration>
 
