--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 	<display-name>Time Capsule Application</display-name>
 
 	<welcome-file-list>
-		<welcome-file>/WEB-INF/index.jsp</welcome-file>
+		<welcome-file>/login.do</welcome-file>
 	</welcome-file-list>
 
 	<error-page>
