--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,13 @@
 			<version>20160212</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+
+
 		<!-- zxing二维码 -->
 		<dependency>
 			<groupId>com.google.zxing</groupId>
