--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,11 @@
 			<artifactId>json</artifactId>
 			<version>20160212</version>
 		</dependency>
-
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
