--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,8 @@
 				<configuration>
 					<scanIntervalSeconds>5</scanIntervalSeconds>
 					<webAppSourceDirectory>src/main/webapp</webAppSourceDirectory>
-					<contextPath>/${project.artifactId}</contextPath>
+					
+					<contextPath>/</contextPath>
 				</configuration>
 
 
