--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,9 +1,5 @@
-log4j.rootLogger=DEBUG, stdout
+log4j.rootLogger=stdout
 
-log4j.logger.isea533.mybatis=DEBUG
-log4j.logger.org.apache.ibatis=DEBUG
-
-log4j.logger.isea533.mybatis.pagehelper = TRACE
 
 ### Console output...
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
