--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
 			<version>4.12</version>
 		</dependency>
 
+		<!-- http://mvnrepository.com/artifact/log4j/log4j -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.15</version>
+		</dependency>
+
 		<!-- Json -->
 		<dependency>
 			<groupId>org.json</groupId>
@@ -27,18 +34,11 @@
 			<version>1.2</version>
 		</dependency>
 
-
-		<!-- zxing二维码 -->
+		<!-- 七牛云存储 -->
 		<dependency>
-			<groupId>com.google.zxing</groupId>
-			<artifactId>core</artifactId>
-			<version>3.2.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.google.zxing</groupId>
-			<artifactId>javase</artifactId>
-			<version>3.2.0</version>
+			<groupId>com.qiniu</groupId>
+			<artifactId>qiniu-java-sdk</artifactId>
+			<version>[7.0.0, 7.0.99]</version>
 		</dependency>
 
 		<!-- Servlet -->
@@ -93,7 +93,7 @@
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
 				<version>9.2.8.v20150217</version>
-				 
+
 				<configuration>
 					<scanIntervalSeconds>2</scanIntervalSeconds>
 					<reload>automatic</reload>
@@ -109,7 +109,7 @@
 
 
 				</configuration>
-				
+
 
 
 
