--- a/pom.xml
+++ b/pom.xml
@@ -9,18 +9,27 @@
 	<url>http://maven.apache.org</url>
 
 	<dependencies>
+
+
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 		</dependency>
 
-		<!-- http://mvnrepository.com/artifact/log4j/log4j -->
+		<!-- Zxing 二维码工具 -->
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.15</version>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>core</artifactId>
+			<version>3.2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>core</artifactId>
+			<version>3.2.1</version>
+		</dependency>
+
 
 		<!-- Json -->
 		<dependency>
@@ -68,23 +77,18 @@
 			<version>4.2.5.RELEASE</version>
 		</dependency>
 
-		<!-- 不明功能，暂时注释 <dependency> <groupId>org.codehaus.jackson</groupId> <artifactId>jackson-mapper-asl</artifactId> 
-			<version>1.7.1</version> </dependency> -->
-
 		<!-- mysql-connector -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.18</version>
 		</dependency>
-
 		<!-- 微信 sdk -->
 		<dependency>
 			<groupId>me.chanjar</groupId>
 			<artifactId>weixin-java-mp</artifactId>
 			<version>1.3.3</version>
 		</dependency>
-
 
 	</dependencies>
 	<build>
