--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,12 @@
 			<artifactId>core</artifactId>
 			<version>3.2.1</version>
 		</dependency>
-
-
+		<!-- http://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
 		<!-- Json -->
 		<dependency>
 			<groupId>org.json</groupId>
