修复了部分bug； 增加了微商城demo

--- a/tc/.settings/org.eclipse.core.resources.prefs
+++ b/tc/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/WEB-INF/jsp/open.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/jsp/register.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/jsp/shop_index.jsp=UTF-8
 encoding/src=UTF-8
