--- a/tc/pom.xml
+++ b/tc/pom.xml
@@ -11,6 +11,12 @@
 	<dependencies>
 
 
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>junit</groupId>
@@ -80,6 +86,15 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>4.2.5.RELEASE</version>
 		</dependency>
+		
+		<!-- http://mvnrepository.com/artifact/org.springframework/spring-context-support -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>4.2.5.RELEASE</version>
+		</dependency>
+
+
 
 		<!-- mysql-connector -->
 		<dependency>
